--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -10,6 +10,10 @@ $app_bgc: #f4f4f4;
 .app_def_mb { margin-bottom: .08rem; }
 
 .app-header { background-color: #fff; }
+.app-header-transparent { background-color: transparent; }
+.app-header-transparent .app-header-back .icon-back { position: relative; color: #fff; }
+.app-header-transparent .app-header-back .icon-back::before { position: relative; z-index: 10; }
+.app-header-transparent .app-header-back .icon-back::after { content: ""; display: block; z-index: 1; position: absolute; top: 10px; left: 6px; width: 24px; height: 24px; border-radius: 12px; background: rgba(0, 0, 0, .5); }
 
 .app-card { background-color: #fff; border-radius: 8px; padding-bottom: 1px; margin: 0 8px 10px 8px; }
 
@@ -209,6 +213,24 @@ $app_bgc: #f4f4f4;
 .us_edit_btn { border: 1px solid #f23030; border-radius: 2px; padding: 0 6px; color: #f23030; margin-right: 10px; }
 
 /* 商详页 */
+.it_header, .it_header .icon-back, .it_header .icon-back::after, .it_header .app-header-con { transition: all 300ms ease-out 0ms; }
+.it_header .app-header-con { opacity: 0; position: relative; }
+.it_header .icon-share { padding: 10px 10px 10px 0; font-size: 20px; position: relative; }
+.it_header .icon-share:before { position: relative; z-index: 10; color: #fff; }
+.it_header .icon-share:after { content: ""; display: block; z-index: 1; position: absolute; top: 10px; left: -2px; width: 24px; height: 24px; border-radius: 12px; background: rgba(0, 0, 0, .5); }
+
+.it_header.show { background-color: #fafafa; }
+.it_header.show .icon-back,.it_header.show .icon-share:before { color: #333; }
+.it_header.show .icon-back::after,.it_header.show .icon-share::after { background: #fafafa; }
+.it_header.show .app-header-con { opacity: 1; }
+
+.it_header_tabs { margin: 0 auto; position: relative; height: 100%; }
+.it_header_tabs > li { width: 40px; font-size: 13px; text-align: center; }
+.it_header_tabs > li.curr { font-weight: bold; font-size: 14px; }
+.it_header_tabs .cursor { transition: all 300ms ease-out 0ms; position: absolute; height: 2px; overflow: hidden; background-color: #f23030; bottom: 0; width: 28px; left: 6px; transform: translate(0px,0px); }
+.it_header_tabs .cursor_detail { transform: translate(40px,0px); }
+.it_header_tabs .cursor_comment { transform: translate(80px,0px); }
+
 .it_main .app-scroller-container { padding-bottom: 10px; }
 
 .it_pictures_more { position: absolute; right: -60px; top: 50%; transform: translateY(-50%); z-index: 100; }
