--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -252,6 +252,7 @@ $app_bgc: #f4f4f4;
 
 .it_main .app-scroller-container { padding-bottom: 10px; }
 
+.it_pictures { min-height: 3.75rem; }
 .it_pictures_more { position: absolute; right: -60px; top: 50%; transform: translateY(-50%); z-index: 100; }
 .it_pictures_more .text { width: 20px; }
 .it_pictures_more .iconfont { width: 20px; height: 20px; border: 2px solid #666; border-radius: 50%; font-weight: bold; color: #666; }
