--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -430,6 +430,8 @@ $app_bgc: #f4f4f4;
 .ca_footer_total .price { font-size: 14px; margin-left: 3px; }
 .ca_footer_total .price::before { content: '￥'; }
 .ca_footer .btn_checkout { height: 50px; width: 1.2rem; font-size: 14px; background-image: linear-gradient(90deg,#ff4700,#f23030); color: #fff; }
+.ca_footer .btn_move_to_fav { border: 1px solid #ffa001; height: 32px; border-radius: 16px; color: #ffa001; padding: 0 10px; margin-right: 10px; }
+.ca_footer .btn_del { border: 1px solid #f10000; height: 32px; border-radius: 16px; color: #f10000; padding: 0 10px; margin-right: 10px; }
 
 .ca_footer ~ .app-main { bottom: 50px; }
 
