--- a/src/app/home/mocks/slider.html
+++ b/src/app/home/mocks/slider.html
@@ -1,6 +1,6 @@
 <style>
-.br_slider { position: relative; }
-.br_slider img { width: 100%; }
+.bk_slider { position: relative; }
+.bk_slider img { width: 100%; }
 </style>
 <Slider loop autoLoop={3000} className={data.bottomMargin? ' app_def_mb': ''} data={images} containerWidth={env.IS_BG ? 375: window.innerWidth} dots />
 <script>
